<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015.
  ~
  ~ The author of these files, Austin Wellman, allows modification, reproduction and private use of them. It, derived works, and works including derived files cannot be published to an app store, packaged and redistributed, used commercially, or sublicensed.
  ~
  ~ During the building process, gradle pulls the following files covered under the Apache License 2.0 which is located in the root of this repository as the file "included_licenses/APACHE_2.0.txt":
  ~ gson
  ~ spring-android-core
  ~ spring-android-rest-template
  ~ support-annotations
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/widget_server_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/label_server" />

        <Spinner
            android:id="@+id/widget_server_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/widget_layout_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/label_layouts" />

        <Spinner
            android:id="@+id/widget_layout_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/widget_configuration_options"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/label_text_size" />

            <Spinner
                android:id="@+id/text_size_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/textSizes"/>

            <TextView
                android:id="@+id/text_size_sample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_text_size_sample"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/label_column_count" />

            <Spinner
                android:id="@+id/column_count_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/counts"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/label_component_height" />

            <Spinner
                android:id="@+id/component_height_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/componentHeights"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/label_row_count" />

            <Spinner
                android:id="@+id/row_count_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/counts"/>

        </LinearLayout>

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_widget" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:text="@string/label_loading"
            android:layout_gravity="center"/>

        <ProgressBar
            android:id="@+id/loading_spinner"
            style="?android:attr/progressBarStyleLarge"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_failed_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:text="@string/label_loading_failed"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>