<!--
  ~ Copyright (c) 2015.
  ~
  ~ The author of these files, Austin Wellman, allows modification, reproduction and private use of them. It, derived works, and works including derived files cannot be published to an app store, packaged and redistributed, used commercially, or sublicensed.
  ~
  ~ The author is not responsible for anything this software causes to happen and is provided as-is with no guarantee of anything.
  ~
  ~ During the building process, gradle pulls the following files covered under the Apache License 2.0 which is located in the root of this repository as the file "included_licenses/APACHE_2.0.txt":
  ~ gson
  ~ spring-android-core
  ~ spring-android-rest-template
  ~ support-annotations
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".configure">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_server_url"/>

        <EditText
            android:id="@+id/add_server_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_server_name"/>

        <EditText
            android:id="@+id/add_server_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_server_format"/>

        <Spinner
            android:id="@+id/server_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/serverFormats"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_server_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_server"/>

    <ListView
        android:id="@+id/server_list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"/>

</LinearLayout>
